# heatmap_analysis

./: CMakeLists.txt  LICENSE.md  README.md  tensorflow_clss.h
include/: heatmap.h  image_ops.h  publisher.h
src/: image_ops.cpp  main.cpp  publisher.cpp
